# delos

./: .gitignore  pyproject.toml
src/delos/player/: grpc_player.py
src/delos/proto/: env.proto  env_pb2.py  env_pb2_grpc.py  grpc_player.py  server.py
src/delos/protos/cartpole/: env.proto  env_pb2.py  env_pb2.pyi  env_pb2_grpc.py  env_pb2_grpc.pyi
src/delos/protos/pendulum/: env.proto  env_pb2_grpc.py  server.py
src/delos/servers/cartpole/: server.py
tests/: client.py  start_server_with_frames.py  stream_frames_client.py  test_connection.py  test_server.py
